creusot/tests/should_fail/prusti/deny_zombies/var.stderr
error[creusot]: `T` cannot be moved from `'curr` to `'old` since it didn't exist at that point
 --> var.rs:5:20
  |
5 | #[ensures(old(x == result))]
  |                    ^^^^^^

error: aborting due to previous error

